welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.code
def arrayFront9(nums:Array[Int]): Boolean = {
var x=0
	for (i <- 0 to 3) {
   if( nums(i)==9) {
   	return true
   }else {
   	return false
   }
}
}